--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
             dockeraml/rotten-potatoes:latest
             dockeraml/rotten-potatoes:${{ github.run_number }}
   CD:
+    needs: [CI]
     runs-on: ubuntu-latest
 
     steps:
@@ -40,4 +41,4 @@ jobs:
         uses: Azure/k8s-set-context@v2
         with:
           method: kubeconfig
-          kubeconfig: ${{ secrets.k8s.KUBECONFIG }}
+          kubeconfig: ${{ secrets.K8S_CONFIG }}
